<resources>
    <string name="app_name">Calcultor</string>
    <string name="infoA">A:</string>
    <string name="infoB">B:</string>
    <string name="infoRes">Result:</string>
    <string name="infoAdd">Add</string>
    <string name="infoSub">Subtract</string>
    <string name="infoMult">Multiply</string>
    <string name="infoDiv">Divide</string>
    <string name="infoSin">Sin</string>
    <string name="infoCos">Cos</string>
    <string name="infoTan">Tan</string>
    <string name="infoSqrt">Sqrt</string>
    <string name="infoPow">Pow</string>
</resources>